--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
   <div class="topnav">
     <a href="index.html">Home</a>
     <a href="blog.html">Blog</a>
-    <a href="#PhotoStart">Contact</a>
+    <a href="contact.html">Contact</a>
   </div>
 
 <hr>
