--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
   <div class="topnav">
     <a href="index.html">Home</a>
     <a href="about.html">Work</a>
-    <a href="contact.html">Contact</a>
+    <a href="blog.html">Blog</a>
   </div>
 
 <hr>
