--- a/blog.html
+++ b/blog.html
@@ -57,9 +57,10 @@
     <article>
       
     <h2><a name="Blog"></a>Blog</h2>
-    <hr>
+   
  <!-- Spacer -->
-    <div class="tempSpacer"></div>
+<!--     <div class="tempSpacer"></div> -->
+        
     <div class="blog-card">
       <div class="meta">
         <div class="photo" style="background-image: url(images/hardrive-pic-600x450.jpg)"></div>
