--- a/blog.html
+++ b/blog.html
@@ -59,7 +59,7 @@
     <h2><a name="Blog"></a>Blog</h2>
    
  <!-- Spacer -->
-<!--     <div class="tempSpacer"></div> -->
+    <div class="tempSpacer"></div>
         
     <div class="blog-card">
       <div class="meta">
